log/build_2024-10-16_03-27-10/my_python_node/stdout_stderr.log
running egg_info
writing ../../build/my_python_node/my_python_node.egg-info/PKG-INFO
writing dependency_links to ../../build/my_python_node/my_python_node.egg-info/dependency_links.txt
writing entry points to ../../build/my_python_node/my_python_node.egg-info/entry_points.txt
writing requirements to ../../build/my_python_node/my_python_node.egg-info/requires.txt
writing top-level names to ../../build/my_python_node/my_python_node.egg-info/top_level.txt
reading manifest file '../../build/my_python_node/my_python_node.egg-info/SOURCES.txt'
writing manifest file '../../build/my_python_node/my_python_node.egg-info/SOURCES.txt'
running build
running build_py
copying my_python_node/listener.py -> /home/zxq/laser_ws/build/my_python_node/build/lib/my_python_node
running install
running install_lib
copying /home/zxq/laser_ws/build/my_python_node/build/lib/my_python_node/listener.py -> /home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node
byte-compiling /home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py to listener.cpython-310.pyc
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 190
    cv2.putText(img, 'FPS:'+f{str(t)}", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2, cv2.LINE_AA)
                                     ^
SyntaxError: unterminated string literal (detected at line 190)

running install_data
running install_egg_info
removing '/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_python_node/my_python_node.egg-info to /home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/zxq/laser_ws/install/my_python_node/lib/my_python_node
writing list of installed files to '/home/zxq/laser_ws/build/my_python_node/install.log'
